# WebTronicsFastAPI

./: Dockerfile  Makefile  README.MD  alembic_dev.ini  alembic_test.ini  docker-compose.yml  docker-compose_db.yml  main.py  models.py  pyproject.toml  settings.py
auth_backend/: authenticate.py
cache_redis/: cache.py
db/: db_config.py  db_schema.py  db_services.py
migration/: env.py
migration/versions/: 45b499a98912_init.py  53b2e68077ab_rates.py  b3601aa1b2ca_init.py
tests/: conftest.py  docker-compose_test.yml  docker-compose_test_cache.yml  test_authenticate.py  test_cache.py  test_db_services.py  test_hasher.py  test_main.py  test_models.py
utils/: dependencies.py  paginations.py
